--- a/_columns/The_Big_Picture/zh-cn/2024-09-25.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-25.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stocks Extend Flattish Trend, But These Stocks Come Under Noticeable Selling
+  Stocks Extend Flattish Trend, But These Stocks Come Under Noticeable Selling	股票延续平坦趋势，但这些股票遭到明显抛售
 date: 2024-09-25 17:21 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,62 +10,78 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market continued a dull trend Wednesday, although the unremarkable trading in the S&P 500 and Nasdaq obscured selling in smaller stocks.
+The stock market continued a dull trend Wednesday, although the unremarkable trading in the S&P 500 and Nasdaq obscured selling in smaller stocks.  
+周三，股市继续保持沉闷的趋势，尽管标准普尔 500 指数和纳斯达克指数的平淡交易掩盖了较小股票的抛售。
 
 
 
 
-The S&P 500 closed 0.2% lower but still made an all-time high in early intraday action at 5,741.03. The Nasdaq composite edged up less than 0.1% and held above the 18,000 level.
+The S&P 500 closed 0.2% lower but still made an all-time high in early intraday action at 5,741.03. The Nasdaq composite edged up less than 0.1% and held above the 18,000 level.  
+标准普尔 500 指数收盘下跌 0.2%，但在盘中早盘仍创下历史新高 5,741.03。纳斯达克综合指数小幅上涨不到 0.1%，保持在 18,000 点上方。
 
 
-But the Russell 2000 index slid 1.2%. Energy, health care and consumer discretionary stocks hurt small caps the most, although losses stretched to other sectors in the small-cap benchmark index.
+But the Russell 2000 index slid 1.2%. Energy, health care and consumer discretionary stocks hurt small caps the most, although losses stretched to other sectors in the small-cap benchmark index.  
+但罗素 2000 指数下跌 1.2%。能源、医疗保健和非必需消费品股对小盘股的伤害最大，尽管跌幅延伸到小盘股基准指数中的其他板块。
 
 
-The S&P 400 midcap index lost 1.3% for its largest drop since Sept. 6.  It is meeting resistance at the 570-574 level. The midcap index is most heavily weighted in industrials (22.7%), financials (16.6%) and consumer discretionary stocks (14.4%). Those sectors fell 0.4% to 0.6% Wednesday.
+The S&P 400 midcap index lost 1.3% for its largest drop since Sept. 6.  It is meeting resistance at the 570-574 level. The midcap index is most heavily weighted in industrials (22.7%), financials (16.6%) and consumer discretionary stocks (14.4%). Those sectors fell 0.4% to 0.6% Wednesday.  
+标准普尔 400 中型股指数下跌 1.3%，创下 9 月 6 日以来的最大跌幅。它在 570-574 水平遇到阻力。中型股指数在工业 （22.7%）、金融 （16.6%） 和非必需消费品股 （14.4%） 中的权重最大。这些板块周三下跌 0.4% 至 0.6%。
 
 
-The Dow Jones Industrial Average also lagged, down 0.7% for the day and snapping a four-day win streak. **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) alone accounted for 118 points of the Dow's 293-point loss. The stock plunged 5.5% in double its average volume, sliding below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). The biotech had disappointing trials on two drugs, reports said.
+The Dow Jones Industrial Average also lagged, down 0.7% for the day and snapping a four-day win streak. **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) alone accounted for 118 points of the Dow's 293-point loss. The stock plunged 5.5% in double its average volume, sliding below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). The biotech had disappointing trials on two drugs, reports said.  
+道琼斯工业平均指数也表现落后，当天下跌 0.7%，结束了连续四天的上涨。仅**安进** （[AMGN）](https://research.investors.com/quote.aspx?symbol=AMGN) 就占道琼斯指数下跌 293 点的 118 点。该股暴跌 5.5%，是平均成交量的两倍，跌破 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)。报道称，这家生物技术公司对两种药物的试验令人失望。
 
 
-Volume fell on the Nasdaq and New York Stock Exchange. Declining stocks outnumbered gainers by about 2-to-1 on the Nasdaq and by 12-to-5 on the NYSE.
+Volume fell on the Nasdaq and New York Stock Exchange. Declining stocks outnumbered gainers by about 2-to-1 on the Nasdaq and by 12-to-5 on the NYSE.  
+纳斯达克和纽约证券交易所的成交量下降。纳斯达克下跌的股票数量与上涨的股票数量不同，分别是 2 比 1 和纽约证券交易所的 12 比 5。
 
 
-Stock Market Sees More Breakouts
---------------------------------
+Stock Market Sees More Breakouts股市出现更多突破
+----------------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/09/MP092524.jpg)Wednesday's dull session also overshadowed a quiet but continued wave of breakouts among high-rated stocks.
+![](https://www.investors.com/wp-content/uploads/2024/09/MP092524.jpg)Wednesday's dull session also overshadowed a quiet but continued wave of breakouts among high-rated stocks.  
+周三沉闷的交易也掩盖了高评级股票平静但持续的突破浪潮。
 
 
-**Progress Software** ([PRGS](https://research.investors.com/quote.aspx?symbol=PRGS)) broke out of a 57-week pattern in heavy volume after a positive earnings report for the business applications software maker. **Pegasystems** ([PEGA](https://research.investors.com/quote.aspx?symbol=PEGA)) cleared a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-101-in-a-flat-base-dull-trade-can-be-positive-action/). Citigroup raised the work-management software maker's price target to 92 from 87.
+**Progress Software** ([PRGS](https://research.investors.com/quote.aspx?symbol=PRGS)) broke out of a 57-week pattern in heavy volume after a positive earnings report for the business applications software maker. **Pegasystems** ([PEGA](https://research.investors.com/quote.aspx?symbol=PEGA)) cleared a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-101-in-a-flat-base-dull-trade-can-be-positive-action/). Citigroup raised the work-management software maker's price target to 92 from 87.  
+**Progress Software** （[PRGS）](https://research.investors.com/quote.aspx?symbol=PRGS) 在商业应用软件制造商公布积极的收益报告后，打破了 57 周的大宗模式。**Pegasystems** （[PEGA](https://research.investors.com/quote.aspx?symbol=PEGA)） 清理了一个[平底](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-101-in-a-flat-base-dull-trade-can-be-positive-action/)。花旗集团将这家工作管理软件制造商的目标价从 87 上调至 92。
 
 
-Industrial pump and valve maker **Flowserve** ([FLS](https://research.investors.com/quote.aspx?symbol=FLS)) broke out of an irregular base in volume that was nearly three times its average. The stock started rallying Tuesday, when a Bank of America analyst said Flowserve [should benefit from demand for nuclear energy](https://www.marketwatch.com/articles/nuclear-energy-stock-flowserve-ai-b0c4c8e6?mod=mw_quote_news) to power artificial intelligence computers.
+Industrial pump and valve maker **Flowserve** ([FLS](https://research.investors.com/quote.aspx?symbol=FLS)) broke out of an irregular base in volume that was nearly three times its average. The stock started rallying Tuesday, when a Bank of America analyst said Flowserve [should benefit from demand for nuclear energy](https://www.marketwatch.com/articles/nuclear-energy-stock-flowserve-ai-b0c4c8e6?mod=mw_quote_news) to power artificial intelligence computers.  
+工业泵和阀门制造商 **Flowserve** （[FLS）](https://research.investors.com/quote.aspx?symbol=FLS) 的产量几乎是其平均水平的三倍。该股周二开始上涨，当时美国银行的一位分析师表示，Flowserve [应该会受益于对核能的需求](https://www.marketwatch.com/articles/nuclear-energy-stock-flowserve-ai-b0c4c8e6?mod=mw_quote_news)，以为人工智能计算机提供动力。
 
 
-[Investor's Business Daily's MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) screen of recent breakouts — which is filtered through the MarketSurge Growth 250 index — lists 55 companies on the stock market. Nearly half are more than 5% past their proper buy points.
+[Investor's Business Daily's MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) screen of recent breakouts — which is filtered through the MarketSurge Growth 250 index — lists 55 companies on the stock market. Nearly half are more than 5% past their proper buy points.  
+[投资者商业日报 （Investor's Business Daily） 的 MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 近期突破筛选（通过 MarketSurge Growth 250 指数过滤）列出了股市中的 55 家公司。近一半的人超过了他们应有的购买点 5% 以上。
 
 
-But other fine choices such as **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)), **Badger Meter** ([BMI](https://research.investors.com/quote.aspx?symbol=BMI)), **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)) and **Wheaton Precious Metals** ([WPM](https://research.investors.com/quote.aspx?symbol=WPM)) remain in buy zones.
+But other fine choices such as **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)), **Badger Meter** ([BMI](https://research.investors.com/quote.aspx?symbol=BMI)), **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)) and **Wheaton Precious Metals** ([WPM](https://research.investors.com/quote.aspx?symbol=WPM)) remain in buy zones.  
+但其他不错的选择，如**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)）、**Badger Meter** （[BMI](https://research.investors.com/quote.aspx?symbol=BMI)）、**Arista Networks** （[ANET](https://research.investors.com/quote.aspx?symbol=ANET)） 和 **Wheaton Precious Metals** （[WPM](https://research.investors.com/quote.aspx?symbol=WPM)） 仍处于买入区。
 
 
-In another sign that breakouts are appearing and generally working, the Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) is near its highest point since April 2022. The exchange traded fund tries to capture [stocks rising past resistance levels](https://www.innovatoretfs.com/etf/default.aspx?ticker=bout), based on IBD's research.
+In another sign that breakouts are appearing and generally working, the Innovator IBD Breakout Opportunities ETF ([BOUT](https://research.investors.com/quote.aspx?symbol=BOUT)) is near its highest point since April 2022. The exchange traded fund tries to capture [stocks rising past resistance levels](https://www.innovatoretfs.com/etf/default.aspx?ticker=bout), based on IBD's research.  
+另一个表明突破正在出现并且普遍有效的迹象是 Innovator IBD Breakout Opportunities ETF （[BOUT）](https://research.investors.com/quote.aspx?symbol=BOUT) 接近 2022 年 4 月以来的最高点。根据 IBD 的研究，该交易所交易基金试图捕捉[上涨超过阻力位的股票](https://www.innovatoretfs.com/etf/default.aspx?ticker=bout)。
 
 
-The ETF is outperforming the more widely traded Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), which closed Wednesday 8% below its June 20 high. Year to date, however, both funds are up about 10%.
+The ETF is outperforming the more widely traded Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), which closed Wednesday 8% below its June 20 high. Year to date, however, both funds are up about 10%.  
+该 ETF 的表现优于交易更广泛的创新者 IBD 50 ETF （[FFTY），](https://research.investors.com/quote.aspx?symbol=FFTY)后者周三收盘价比 6 月 20 日的高点低 8%。然而，年初至今，这两只基金都上涨了约 10%。
 
 
-The IBD 50 index rose 0.3% Wednesday. **Duolingo** ([DUOL](https://research.investors.com/quote.aspx?symbol=DUOL)) gave the IBD 50 a big boost, as shares rallied 6.6% to record highs. The language-learning app provider is [adding AI-generated features](https://www.investors.com/news/technology/duolingo-stock-ai-innovations-language-learning-app/). JPMorgan Chase and other firms raised their price targets on Duolingo.
+The IBD 50 index rose 0.3% Wednesday. **Duolingo** ([DUOL](https://research.investors.com/quote.aspx?symbol=DUOL)) gave the IBD 50 a big boost, as shares rallied 6.6% to record highs. The language-learning app provider is [adding AI-generated features](https://www.investors.com/news/technology/duolingo-stock-ai-innovations-language-learning-app/). JPMorgan Chase and other firms raised their price targets on Duolingo.  
+IBD 50 指数周三上涨 0.3%。**Duolingo** （[DUOL](https://research.investors.com/quote.aspx?symbol=DUOL)） 大幅提振了 IBD 50，股价上涨 6.6% 至历史新高。这家语言学习应用程序提供商正在[添加 AI 生成的功能](https://www.investors.com/news/technology/duolingo-stock-ai-innovations-language-learning-app/)。摩根大通和其他公司上调了 Duolingo 的目标价。
 
 
-What September Says For Market
-------------------------------
+What September Says For Market9 月对市场意味着什么
+-----------------------------------------
 
 
-With three trading sessions left this month, the stock market has avoided the curse of September. Historically, the S&P 500 falls an average of 0.7% in September, making it the worst month of the year statistically.
+With three trading sessions left this month, the stock market has avoided the curse of September. Historically, the S&P 500 falls an average of 0.7% in September, making it the worst month of the year statistically.  
+本月还剩下三个交易日，股市避免了 9 月的诅咒。从历史上看，标准普尔 500 指数在 9 月份平均下跌 0.7%，从统计上看，它是一年中最糟糕的月份。
 
 
-Adam Turnquist, chief technical strategist for LPL Financial, said in a report that market momentum this year favors continued gains for the rest of 2024.
+Adam Turnquist, chief technical strategist for LPL Financial, said in a report that market momentum this year favors continued gains for the rest of 2024.  
+LPL Financial 首席技术策略师 Adam Turnquist 在一份报告中表示，今年的市场势头有利于 2024 年剩余时间的持续上涨。
 
 
 
@@ -73,7 +89,8 @@ Adam Turnquist, chief technical strategist for LPL Financial, said in a report t
 ---
 
 
-[**See Which Stocks Are In The Leaderboard Model Portfolio**](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
+[**See Which Stocks Are In The Leaderboard Model Portfolio  
+查看排行榜模型投资组合中有哪些股票**](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
 
 
 
@@ -81,28 +98,35 @@ Adam Turnquist, chief technical strategist for LPL Financial, said in a report t
 ---
 
 
-Over the last 75 years, the S&P 500 has fallen in the final three months of the year only eight times when momentum was strong during the first three quarters. Whenever returns exceed 16.4% in the first nine months (the S&P is up 20% this year), the S&P has climbed in the fourth quarter 80% of the time. Fourth-quarter gains, however, lag with a 3.5% average return.
+Over the last 75 years, the S&P 500 has fallen in the final three months of the year only eight times when momentum was strong during the first three quarters. Whenever returns exceed 16.4% in the first nine months (the S&P is up 20% this year), the S&P has climbed in the fourth quarter 80% of the time. Fourth-quarter gains, however, lag with a 3.5% average return.  
+在过去的 75 年里，标准普尔 500 指数在今年的最后三个月下跌了八次，当时前三个季度的势头强劲。每当前九个月的回报率超过 16.4% 时（标准普尔今年上涨了 20%），标准普尔在第四季度的 80% 时间内都上涨了。然而，第四季度的涨幅落后于 3.5% 的平均回报率。
 
 
-Moreover, when the S&P 500 makes a new high during September, the benchmark index climbs in the fourth quarter 91.3% of the time. The average S&P 500 return in October-December is 4.8%. And in 21 out of 23 years, it produced positive results.
+Moreover, when the S&P 500 makes a new high during September, the benchmark index climbs in the fourth quarter 91.3% of the time. The average S&P 500 return in October-December is 4.8%. And in 21 out of 23 years, it produced positive results.  
+此外，当标准普尔 500 指数在 9 月份创下新高时，基准指数在第四季度的攀升率为 91.3%。标准普尔 500 指数在 10 月至 12 月的平均回报率为 4.8%。在 23 年中的 21 年中，它产生了积极的结果。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092524.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092524.pdf)
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology  
+IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Risk Management In The Stock Market: How Much Money To Invest  
+股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Futures Rise On Surging Micron, Fresh Chinese Stimulus Buzz](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-micron-surges-chinese-stocks-jump/)
+[Futures Rise On Surging Micron, Fresh Chinese Stimulus Buzz  
+期货因微米飙升而上涨，中国刺激措施的新嗡嗡声](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-micron-surges-chinese-stocks-jump/)
 
 
 
