--- a/_columns/The_Big_Picture/zh-cn/2024-09-26.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-26.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  S&P 500 Hits New High Ahead Of Pivotal Inflation Report; Nvidia, 3 Market Leaders To Watch
+  S&P 500 Hits New High Ahead Of Pivotal Inflation Report; Nvidia, 3 Market Leaders To Watch	标准普尔 500 指数在关键通胀报告发布前创下新高;Nvidia，值得关注的 3 大市场领导者
 date: 2024-09-26 17:18 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,24 +10,30 @@ author: SCOTT LEHTONEN
 
 
 
-With a critical inflation report due Friday morning, traders still sent the S&P 500 to a new high Thursday. And the Nasdaq composite remains at its highest level since it touched a record on July 16.
+With a critical inflation report due Friday morning, traders still sent the S&P 500 to a new high Thursday. And the Nasdaq composite remains at its highest level since it touched a record on July 16.  
+周五上午将发布关键的通胀报告，交易员周四仍将标准普尔 500 指数推至新高。纳斯达克综合指数仍处于 7 月 16 日触及历史新高以来的最高水平。
 
 
 
 
-The Dow Jones Industrial Average rose 0.6% to rebound from Wednesday's bearish downside reversal. The S&P 500 gained 0.4%, while the Nasdaq composite moved up 0.6%. The small-cap Russell 2000 index climbed 0.6%.
+The Dow Jones Industrial Average rose 0.6% to rebound from Wednesday's bearish downside reversal. The S&P 500 gained 0.4%, while the Nasdaq composite moved up 0.6%. The small-cap Russell 2000 index climbed 0.6%.  
+道琼斯工业平均指数上涨 0.6%，从周三的看跌下行逆转中反弹。标准普尔 500 指数上涨 0.4%，而纳斯达克综合指数上涨 0.6%。小盘股罗素 2000 指数上涨 0.6%。
 
 
-Seven of the 11 S&P 500 sectors ended higher, with materials and technology leading the way. The energy and real estate sectors paced the losers.
+Seven of the 11 S&P 500 sectors ended higher, with materials and technology leading the way. The energy and real estate sectors paced the losers.  
+标准普尔 500 指数的 11 个板块中有 7 个板块收高，其中材料和科技领涨。能源和房地产板块紧随跌幅。
 
 
-Volume rose on the Nasdaq and the New York Stock Exchange from Wednesday's session.
+Volume rose on the Nasdaq and the New York Stock Exchange from Wednesday's session.  
+纳斯达克和纽约证券交易所的成交量从周三开始上升。
 
 
-Ahead of Friday's stock market open, the Commerce Department will release its monthly personal income and outlays report for August. Personal income is expected to rise 0.4% on the month. The core personal consumption expenditures, or PCE, price index is estimated to increase 0.2% for the month, with an annual rise of 2.7%.
+Ahead of Friday's stock market open, the Commerce Department will release its monthly personal income and outlays report for August. Personal income is expected to rise 0.4% on the month. The core personal consumption expenditures, or PCE, price index is estimated to increase 0.2% for the month, with an annual rise of 2.7%.  
+在周五股市开盘前，美国商务部将发布 8 月份的月度个人收入和支出报告。预计个人收入当月将增长 0.4%。核心个人消费支出 （PCE） 价格指数估计当月上涨 0.2%，年涨幅为 2.7%。
 
 
-The core PCE price index is the Federal Reserve's favored inflation gauge.
+The core PCE price index is the Federal Reserve's favored inflation gauge.  
+核心 PCE 价格指数是美联储青睐的通胀指标。
 
 
 
@@ -35,7 +41,8 @@ The core PCE price index is the Federal Reserve's favored inflation gauge.
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Market  
+英伟达、苹果和特斯拉强调如何应对这一市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -43,50 +50,51 @@ The core PCE price index is the Federal Reserve's favored inflation gauge.
 ---
 
 
-Dow Jones Winners And Losers
-----------------------------
+Dow Jones Winners And Losers道琼斯赢家和输家
+------------------------------------
 
 
-In the Dow Jones index, **Dow** ([DOW](https://research.investors.com/quote.aspx?symbol=DOW)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) were among the biggest winners Thursday with gains of 3.6% and 3.4%, respectively.
+In the Dow Jones index, **Dow** ([DOW](https://research.investors.com/quote.aspx?symbol=DOW)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) were among the biggest winners Thursday with gains of 3.6% and 3.4%, respectively.  
+在道琼斯指数中，**道琼斯**指数 （[DOW](https://research.investors.com/quote.aspx?symbol=DOW)） 和**卡特彼勒** （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 周四分别上涨 3.6% 和 3.4%，成为最大的赢家之一。
 
 
-On the downside, **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) and **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) were the biggest losers during the session, down 1.8% and 1.4%, respectively.
+On the downside, **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) and **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) were the biggest losers during the session, down 1.8% and 1.4%, respectively.  
+不利的一面是，**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 和**默克** （[MRK](https://research.investors.com/quote.aspx?symbol=MRK)） 是盘中最大的输家，分别下跌 1.8% 和 1.4%。
 
 
-[A majority of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund fell 0.2%. Notably, Mag 7 stock **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) is building a cup with handle that has a 441.85 entry. But the stock's relative strength line is lagging.
+[A majority of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund fell 0.2%. Notably, Mag 7 stock **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) is building a cup with handle that has a 441.85 entry. But the stock's relative strength line is lagging.  
+[大多数 Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收低，Roundhill Magnificent Seven （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 交易所交易基金下跌 0.2%。值得注意的是，Mag 7 股票 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 正在制造一个带手柄的杯子，入口为 441.85。但该股的相对强弱线滞后。
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell 0.8% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) rallied 2.5% to finish out of buy range beyond a 175.45 cup-with-handle entry.
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell 0.8% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) rallied 2.5% to finish out of buy range beyond a 175.45 cup-with-handle entry.  
+Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周四下跌 0.8%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 中，**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)） 上涨 2.5%，收盘价超过 175.45 带手柄杯入场。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP092624.jpg)
 
 
-What To Do Now
---------------
+What To Do Now 现在该做什么
+---------------------
 
 
-The S&P 500 is close to [triggering a power trend](https://www.investors.com/how-to-invest/investors-corner/stock-market-condition-called-power-trend-is-when-you-really-need-to-be-buying/), while the [Nasdaq entered one today](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-power-trend-ai-stocks-super-micro-dive/). That adds a layer of bullishness to an already positive market. A power trend is a part of [IBD's Market School](https://get.investors.com/online-courses/market-school/) trading rules and represents unusually bullish trading conditions.
+The S&P 500 is close to [triggering a power trend](https://www.investors.com/how-to-invest/investors-corner/stock-market-condition-called-power-trend-is-when-you-really-need-to-be-buying/), while the [Nasdaq entered one today](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-power-trend-ai-stocks-super-micro-dive/). That adds a layer of bullishness to an already positive market. A power trend is a part of [IBD's Market School](https://get.investors.com/online-courses/market-school/) trading rules and represents unusually bullish trading conditions.  
+标准普尔 500 指数接近触发力量趋势，而[纳斯达克指数今天进入](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-power-trend-ai-stocks-super-micro-dive/)[了力量趋势](https://www.investors.com/how-to-invest/investors-corner/stock-market-condition-called-power-trend-is-when-you-really-need-to-be-buying/)。这为本已积极的市场增添了一层看涨情绪。力量趋势是 [IBD 市场学校](https://get.investors.com/online-courses/market-school/)交易规则的一部分，代表异常看涨的交易条件。
 
 
-Amid the ongoing stock market rally, IBD has an 80%-100% recommended exposure threshold, which means that investors should be heavily invested. Investors who need to add more exposure should look for market leaders breaking out past correct entries.
+Amid the ongoing stock market rally, IBD has an 80%-100% recommended exposure threshold, which means that investors should be heavily invested. Investors who need to add more exposure should look for market leaders breaking out past correct entries.  
+在持续的股市反弹中，IBD 的推荐风险敞口阈值为 80%-100%，这意味着投资者应该进行大量投资。需要增加更多敞口的投资者应该寻找突破正确入场的市场领导者。
 
 
-But investors shouldn't become complacent. The current environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. That means identifying sell signals and other abrupt character changes, like **MakeMyTrip** ([MMYT](https://research.investors.com/quote.aspx?symbol=MMYT)), which plunged more than 11% Thursday.
+But investors shouldn't become complacent. The current environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. That means identifying sell signals and other abrupt character changes, like **MakeMyTrip** ([MMYT](https://research.investors.com/quote.aspx?symbol=MMYT)), which plunged more than 11% Thursday.  
+但投资者不应该自满。当前环境仍然需要[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。这意味着识别卖出信号和其他突然的特征变化，例如 **MakeMyTrip** （[MMYT](https://research.investors.com/quote.aspx?symbol=MMYT)），周四暴跌超过 11%。
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured just one stock, adding to the shortlist of breakouts this week. Notably, **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) briefly lifted above a cup-with-handle entry at 149.93.
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured just one stock, adding to the shortlist of breakouts this week. Notably, **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) briefly lifted above a cup-with-handle entry at 149.93.  
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单中仅包含一只股票，增加了本周的突破候选名单。值得注意的是，**Arm Holdings** （[ARM](https://research.investors.com/quote.aspx?symbol=ARM)） 短暂升至带手柄杯门口 149.93 上方。
 
 
-Meanwhile, there are another 12 ideas appearing on MarketSurge's Near Pivot list. That suggests there are more buying opportunities ready to emerge.
-
-
-
-
----
-
-
-[**Close, But No 'Perfect' Cigar For Nvidia, Broadcom. But Kudos To These 22 Gems.**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+Meanwhile, there are another 12 ideas appearing on MarketSurge's Near Pivot list. That suggests there are more buying opportunities ready to emerge.  
+与此同时，MarketSurge 的 Near Pivot 列表中还出现了另外 12 个想法。这表明有更多的买入机会即将出现。
 
 
 
@@ -94,47 +102,67 @@ Meanwhile, there are another 12 ideas appearing on MarketSurge's Near Pivot list
 ---
 
 
-
-S&P 500 Leader Nvidia Extends Win Streak
-----------------------------------------
-
-
-Amid the stock market rebound, leaders to watch include **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), **Reddit** ([RDDT](https://research.investors.com/quote.aspx?symbol=RDDT)) **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx?symbol=TXRH)) and **Wingstop** ([WING](https://research.investors.com/quote.aspx?symbol=WING)).
-
-
-[IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) Nvidia has a 131.26 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) from an irregular handle. Investors also could use the Sept. 12 high of 120.79 as a much smaller handle and an early buy trigger. according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. Shares also edged higher Thursday, extending a three-day win streak.
-
-
-Social media platform Reddit is building a cup base with a 78.08 buy point, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. Investors should be on the lookout for the [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) to add a handle.
-
-
-Texas Roadhouse is attempting to break out above a 177.72 flat-base entry. And Wingstop topped a 431.03 entry earlier this week, but is below it.
-
-
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092624.pdf)
-
-
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
+[**Close, But No 'Perfect' Cigar For Nvidia, Broadcom. But Kudos To These 22 Gems.  
+接近，但没有 Nvidia、Broadcom 的“完美”雪茄。但要向这 22 颗宝石致敬。**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
 
-**YOU MAY ALSO LIKE:**
+---
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+S&P 500 Leader Nvidia Extends Win Streak标准普尔 500 指数领导者 Nvidia 延续连胜纪录
+--------------------------------------------------------------------
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+Amid the stock market rebound, leaders to watch include **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), **Reddit** ([RDDT](https://research.investors.com/quote.aspx?symbol=RDDT)) **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx?symbol=TXRH)) and **Wingstop** ([WING](https://research.investors.com/quote.aspx?symbol=WING)).  
+在股市反弹中，值得关注的领导者包括 **Nvidia** （[NVDA）、](https://research.investors.com/quote.aspx?symbol=NVDA)**Reddit** （[RDDT）、](https://research.investors.com/quote.aspx?symbol=RDDT)**Texas Roadhouse** （[TXRH）](https://research.investors.com/quote.aspx?symbol=TXRH) 和 **Wingstop** （[WING](https://research.investors.com/quote.aspx?symbol=WING)）。
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) Nvidia has a 131.26 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) from an irregular handle. Investors also could use the Sept. 12 high of 120.79 as a much smaller handle and an early buy trigger. according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. Shares also edged higher Thursday, extending a three-day win streak.  
+[IBD 排行榜股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)Nvidia 有一个来自不规则手柄的 131.26 [购买点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)。投资者还可以将 9 月 12 日的高点 120.79 用作一个小得多的手柄和早期买入触发因素。根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别。股价周四也小幅走高，延续了连续三天的上涨势头。
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+Social media platform Reddit is building a cup base with a 78.08 buy point, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. Investors should be on the lookout for the [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) to add a handle.  
+根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别，社交媒体平台 Reddit 正在建立一个拥有 78.08 买入点的杯底。投资者应该留意 [IBD SwingTrader 添加手柄的想法](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)。
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+Texas Roadhouse is attempting to break out above a 177.72 flat-base entry. And Wingstop topped a 431.03 entry earlier this week, but is below it.  
+Texas Roadhouse 正试图突破 177.72 的平底入口。Wingstop 本周早些时候突破了 431.03 的条目，但低于它。
+
+
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092624.pdf)
+
+
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
+请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+
+
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
+在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
