--- a/_columns/The_Big_Picture/2024-10-01.md
+++ b/_columns/The_Big_Picture/2024-10-01.md
@@ -112,7 +112,7 @@ If some of your winners have hit the 20% profit target from a proper buy point, 
 [Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Stocks Fall On Iran Attack, Hold Support; Tesla Deliveries On Tap](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-pares-losses-iran-missile-attack-tesla-deliveries/)
+[Futures Fall, Oil Jumps On Mideast Fears; Tesla Faces Huge News](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-crude-oil-jumps-mideast-fears-tesla-deliveries/)
 
 
 
